fixed button, sizing, spacing, and trying to fix accordeon and block spacing

--- a/web/css/global.css
+++ b/web/css/global.css
@@ -59,6 +59,9 @@ header {
 .collapse .btn-warning {
   background-color: var(--yellow);
   border: none;
+  width: 400px;
+  max-width: 400px;
+  min-width: 300px;
 }
 
 #smooth-scroll {
